# work_sit

./: .gitignore  CMakeLists.txt  Data_of_prince.cpp  Data_of_prince.h  MySqlDemo.cpp  MySqlQuery.cpp  MySqlQuery.h  change_num_to_prince.cpp  check_num.cpp  find_data.cpp  find_data.h  find_use.cpp  get_all.cpp  hive_.sql  hive_tmp.sql  mut_check_num.cpp  query_show.cpp  regex_check_num.cpp  single_db.cpp  test_all.cpp  test_mysql.cpp
graph/: CMakeLists.txt  test_graph.cpp
inspect/: CMakeLists.txt  main.cpp
my_project.git/: config
sh/: CMakeLists.txt  cal.awk  check_passwd_change.sh  db.awk  db.txt  get_db.sh  get_imisi.sh  get_imsi.sh  getdb.sh  hell.txt  hello.txt  imsi.txt  ip_list.txt  log.txt  mvfile.sh  sed.puml  test_awk.sh  test_cp_mv.sh  test_eq.sh  test_sed.sh  test_unique.txt  test_var.sh
test/: CMakeLists.txt  LNIG_2019011221010.00001.32  a  another_make_sh.cpp  another_new_file_1.cpp  authorized_keys  b  check_zk.sh  main.cpp  main10.cpp  main11.cpp  main2.cpp  make_dir.sh  make_sh.cpp  mv_file.sh  net_t.cpp  newfile3.sh  sh_make.sh  signal_test.cpp  synchronization.sh  test_execl.cpp  test_fork_dead.cpp  test_host_ip.cpp  test_include.cpp  test_root_uid.cpp  test_time_out.cpp
test/indbtohive/: AlertMgr.h  CMakeCache.txt  CMakeLists.txt  FileHandle.cpp  FileHandle.h  HiveApi.cpp  HiveApi.h  InToHive.ini  IndbToHive.cpp  IndbToHive.h  LoggerMgr.h  Makefile  OffSetMgr.cpp  OffSetMgr.h  cmake_install.cmake  indbtohive.ini  main.cpp
test/makefile/: CMakeLists.txt  LNIG_2019092515021.00001.32  LNIG_2019092515022.00001.32  LNIG_2019092515023.00001.32  LNIG_2019092515024.00001.32  LNIG_2019092515025.00001.32  LNIG_2019092515028.00001.32  LNIG_2019092515029.00001.32  LNIG_2019092515311.00001.32  LNIG_2019092515351.00001.32  LNIG_2019092515431.00001.32  LNIG_2019092515451.00001.32  LNIG_2019092515471.00001.32  LNIG_2019092515851.00001.32  LNIG_2019092515871.00001.32  LNIG_2019092515971.00001.32  LNIG_2019101017025.00001.32  LNIG_2020021610025.00001.32  make.sh  profile_example
test/makefile/log/: log.h
test/makefile/log/makefile/: make_bill_task.h  make_file.ini  test_task_makefile.cpp
test/makefile/make_file/: CMakeLists.txt  bill_count.txt  bill_cout.txt  cat_file.sh  count_file.sh  make_bill_task.h  make_file.ini  t_mv.sh  test_if.sh  test_task_makefile.cpp
test/makefile/tmp/: bill_cout.txt
